--- a/CommonMoCap/CommonMoCap.vcxproj
+++ b/CommonMoCap/CommonMoCap.vcxproj
@@ -33,11 +33,11 @@
   </ImportGroup>
   <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
-    <Import Project="..\Project.props" />
+    <Import Project="..\FBXProject.props" />
   </ImportGroup>
   <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
-    <Import Project="..\Project.props" />
+    <Import Project="..\FBXProject.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -89,23 +89,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="CommonMocap.h" />
-    <ClInclude Include="CommonMocapFBX.h" />
     <ClInclude Include="helpers\FBX_helpers.h" />
-    <ClInclude Include="helpers\Kinect_helpers.h" />
     <ClInclude Include="helpers\UI_helpers.h" />
     <ClInclude Include="helpers\WindowIDS.h" />
-    <ClInclude Include="kinect2fbx\HierarchyNodeDefinition.h" />
-    <ClInclude Include="kinect2fbx\KinectSkeletonMapper.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CommonMoCap.cpp" />
     <ClCompile Include="helpers\FBX_helpers.cpp" />
-    <ClCompile Include="helpers\Kinect_Helpers.cpp" />
     <ClCompile Include="helpers\UI_helpers.cpp" />
-    <ClCompile Include="kinect2fbx\HierarchyNodeDefinition.cpp" />
-    <ClCompile Include="kinect2fbx\KinectSkeletonMapper.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
