--- a/FBXStreaming/FBXStreaming.vcxproj.filters
+++ b/FBXStreaming/FBXStreaming.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="main\keyFramePackets.h">
       <Filter>Header Files\main</Filter>
     </ClInclude>
+    <ClInclude Include="main\FBXCoding.h">
+      <Filter>Header Files\main</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="UI\UI.cpp">
@@ -60,6 +63,9 @@
       <Filter>Source Files\main</Filter>
     </ClCompile>
     <ClCompile Include="main\FBXJointConverter.cpp">
+      <Filter>Source Files\main</Filter>
+    </ClCompile>
+    <ClCompile Include="main\FBXCoding.cpp">
       <Filter>Source Files\main</Filter>
     </ClCompile>
   </ItemGroup>
